WebCore:

Reviewed by Darin.

        Bug 8749: XBM rendered incorrectly as black on white

        xbm images are now created and rendered using black on a
        transparent background (same behavior as in Firefox)

        Test: platform/mac/fast/canvas/canvas-draw-xbm-image.html

        * platform/graphics/cg/ImageSourceCG.cpp:
        (WebCore::ImageSource::createFrameAtIndex):

LayoutTests:

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=8749

        * platform/mac/fast/canvas/canvas-draw-xbm-image-expected.checksum: Added.
        * platform/mac/fast/canvas/canvas-draw-xbm-image-expected.png: Added.
        * platform/mac/fast/canvas/canvas-draw-xbm-image-expected.txt: Added.
        * platform/mac/fast/canvas/canvas-draw-xbm-image.html: Added.
        * platform/mac/fast/canvas/resources: Added.
        * platform/mac/fast/canvas/resources/smile.xbm: Added.



Canonical link: https://commits.webkit.org/24267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30556 268f45cc-cd09-0410-ab3c-d52691b4dbfc